[package]
name = "emu_test_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rayon = "1.5.1"
fxhash = "0.2.1"
once_cell = "1.17.1"

owo-colors = "3.5.0"
indicatif = { version = "0.17.3", features = ["rayon"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

image = { version = "0.24.6", default-features = false, features = ["png"] }